# project

my_proj/: main.py  pyproject.toml
my_proj/my_proj/: nltk_m.py
my_proj/my_proj/nltk_analyzer/: nltk_downloder.py  nltk_m.py
my_proj/static/: index.html  script.js
my_proj/statics/: script.js  stile.css
