[project]
name = "my-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic (>=1.14.0,<2.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "dependency-injector (>=4.45.0,<5.0.0)",
    "unicorn (>=2.1.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "vader-multi (>=3.2.2.1,<4.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
